Fix bug #76074 (opcache corrupts variable in for-loop)